# TDP005

./: .gitignore  CMakeLists.txt  README.md
doc/: ideas.txt  portfolio.txt
doc/Kodgranskningsprotokoll/: TDP005-mall.aux  TDP005-mall.fdb_latexmk  TDP005-mall.fls  TDP005-mall.out  TDP005-mall.tex  TDP005-mall.xdv  TDP005mall.cls
doc/Kravspec/: TDP005-mall.aux  TDP005-mall.fdb_latexmk  TDP005-mall.fls  TDP005-mall.tex  TDP005-mall.xdv  Untitled 1.odg  kravspec.aux  kravspec.fdb_latexmk  kravspec.fls  kravspec.out  kravspec.tex  kravspec.tex~  kravspec.xdv
doc/designspec/: TDP005-mall.aux  TDP005-mall.fdb_latexmk  TDP005-mall.fls  TDP005-mall.out  TDP005-mall.tex  TDP005-mall.xdv
doc/gruppkontrakt/: exempel.tex  gruppkontrakt.aux  gruppkontrakt.fdb_latexmk  gruppkontrakt.fls  gruppkontrakt.out  gruppkontrakt.tex  gruppkontrakt.tex~  gruppkontrakt.xdv  mall.cls
doc/kravspec/: TDP005-mall.tex~  kravspec.aux  kravspec.fdb_latexmk  kravspec.fls  kravspec.out  kravspec.tex  kravspec.tex~  kravspec.toc  kravspec.xdv
doc/valgrind/: valgrind.txt  valgrind2.txt
include/: Base_State.h  Base_State.h~  Game_Object.h  config.h  engine.h  engine.h~  player.h
include/enemy/: enemy.h  enemy.h~  enemyHandler.h  enemyHandler.h~
include/entity/: enemy.h  enemyHandler.h  player.h
include/spells/: Base_Spell.h  Earth_Spell.h  Fire_Spell.h  Spell_Manager.h  Water_Spell.h  Wind_Spell.h
include/state/: Base_State.h  Game_State.h  Menu_State.h
include/utils/: #resource_manager.h#  .#resource_manager.h  utility.h  (+4 more)
src/: engine.cpp  engine.cpp~  main.cpp  player.cc  step01.cpp
(+25 files in other folders)
